# libhs

./: .gitignore  CMakeLists.txt  annotated.html  annotated_dup.js  classes.html  common_8h_source.html  device_8h_source.html  dir_5a7b6342532dea88dfde2bc79b8f4aca.html  dir_5a7b6342532dea88dfde2bc79b8f4aca.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  group__device.html  group__device.js  group__hid.html  group__hid.js  group__hid_strucths__hid__descriptor.js  group__misc.html  group__misc.js  group__misc_strucths__descriptor__set.js  group__monitor.html  group__monitor.js  group__serial.html  group__serial.js  hid_8h_source.html  hs_8h_source.html  index.html  install.html  libhs.pro  libhs.sln  libhs.vcxproj  libhs.vcxproj.filters  libhs_common.pri  modules.html  modules.js  monitor_8h_source.html  navtreedata.js  navtreeindex0.js  (+7 more)
doc/: Doxyfile  index.md  install.md
examples/: CMakeLists.txt  list_devices.c
examples/enumerate_devices/: enumerate_devices.c
examples/list_devices/: CMakeLists.txt  list_devices.vcxproj  list_devices.vcxproj.filters
examples/monitor_devices/: monitor_devices.c  monitor_devices.vcxproj
include/: hs.h
include/hs/: common.h  device.h  hid.h  monitor.h  platform.h  serial.h
src/: CMakeLists.txt  common.c  compat.h  device.c  device_posix.c  device_priv.h  device_win32.c  hid_darwin.c  hid_linux.c  hid_win32.c  htable.h  monitor.c  monitor_darwin.c  monitor_linux.c  monitor_priv.h  monitor_win32.c  platform.c  platform_darwin.c  platform_posix.c  platform_win32.c  serial_posix.c  serial_win32.c  src.pro  src.vcxproj  src.vcxproj.filters  util.h
